# bfc_script_RAG

./: .gitattributes  .gitignore  analyze_pessoal_collection.py  create_chunks.py  diagnose_embeddings.py  documentation_chunks.json  embedding.py  enums_pessoal_and_folha.json  environment_variables.py  faiss_processing.py  package-lock.json  pyproject.toml  readme.md  requirements.txt  run.py  semantic_search.py  test_distance_fix.py  test_query.py  test_search.py
app/: __init__.py  main.py
app/core/: config.py  context_processor.py  initialize_chroma_db.py  integrated_rag_system.py  rag_monitoring.py  response_generator.py  seechromadb.py  semantic_search.py
app/ui/: optimized_ui.py  ui.py
app/utils/: environment_variables.py  get_embeddings_from_s3.py  logging_utils.py  prompts.py  s3.py  token_logger.py
chunks/bfc_script_docs/: bfc_script_docs_Geral_chunk1.json  bfc_script_docs_Geral_chunk10.json  bfc_script_docs_Geral_chunk100.json  bfc_script_docs_Geral_chunk101.json  bfc_script_docs_Geral_chunk102.json  bfc_script_docs_Geral_chunk103.json  bfc_script_docs_Geral_chunk104.json  (+720 more)
docs/: bfc_script_docs.md  documentation_chunks.json
fonte_dados/: com-ativos.json  doc.txt  fonte_dados_folha_v2.json  fonte_dados_pessoal.json
logs/: llm_payload_20250602_194610_014402.json  llm_payload_retry_20250602_194610_991687.json
mds/: CONCEITO - FONTE DINÂMICA.md  CONCEITO - PARÂMETROS.md  FONTE DINÂMICA - CRITÉRIOS, CAMPOS E PARÂMETROS.md  PARAMETROS - ARQUIVO.md  PARAMETROS - MATRICULA.md  PARAMETROS - SELEÇÃO AVANÇADA.md
tools/: faiss_processing.py
(+2306 files in other folders)
