[tool.poetry]
name = "bfc-script-rag"
version = "0.1.0"
description = "BFC Script RAG Application"
authors = ["Your Name <your.email@example.com>"]
readme = "readme.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.12.0"
chromadb = "^0.4.22"
python-dotenv = "^1.0.1"
gradio = "5.32.0"
tiktoken = "^0.6.0"
numpy = "^1.26.4"
tqdm = "^4.66.2"
ijson = "^3.2.3"
boto3 = "^1.38.27"
botocore = "^1.38.27"
dotenv = "^0.9.9"
langchain = "^0.3.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 